--- a/1.C语言/基础语法.md
+++ b/1.C语言/基础语法.md
@@ -1,39 +1,58 @@
-#### 计算机语言(程序设计语言)的历史
+```c
+#include <stdio.h>
+```
 
-  机器语言→汇编语言→C语言→Python、Java等语言
-  国际标准:ANSI C(C89/C90)
-  编译器:Clang,GCC,WIN-TC,SUBLIME,MSVC,Turbo C等
-+ 写C代码
-  + 1.创建工程
-  + 2.创建文件
-    + .c 源文件
-    + .h 头文件
-  + 3.写代码
-    + 项目属性→链接器→系统→子系统→控制台
-    + main函数是程序的入口,必须有,唯一
-      ```c
-      #include <stdio.h>//打招呼#include是命令,std(标准),i(input),o(output),<stdio.h>是头文件
-      int main()//main函数调用之后返回int数据,main是函数名
-      {
-        printf("Hello,World!");//printf打印函数,是内置函数
-        return 0;//返回值为0
-      }
-      ```
-  + 4.运行和调试
-    + ctrl+f5:运行
-    + f10:一句一句地调试
-  
-  + 5."%d","%c","%f","%x","%o"
-  
-  + 6.char;short,int,long,float,double
-    创建变量,向内存申请空间
-  
-    ```c
-    int main()
-    {
-        printf("%d",sizeof(char));
-        return 0
-    }
-    ```
-  
-    
++ "std"是"standard"的缩写
+  "i"是"input"的缩写
+  "o"是"output"的缩写
+  .h是头文件格式,"h"是"head"的缩写
+  stdio.h内置了scanf函数、printf函数
+
+___
+
+```c
+int main()
+{
+    return 0;
+}
+```
+
++ main():主函数,是程序执行的唯一入口
++ return 0:函数返回值;这里会表示main函数正常退出
++ int:说明函数返回值的数据类型;这里int是默认的
++ 注意!!!语句结尾要加";"
+
+___
+
+```c
+printf("Hello,World!");
+int int_1=0;
+short int_2=1;
+long int_3=2;
+long long int_4=3;
+float float_1=0.99f;
+double float_2=1.1;
+char char_1="A";
+printf("%d,%x,%o",10,10,10)
+```
+
++ 注意!!!所有变量要在最前边声明
++ "f"是"function"的缩写
++ 格式化输出,%d--十进制,%x--十六进制,%o--八进制,%c--字符,%f--浮点数
++ 数据类型
+  + 整数:int 4B;short 2B;long 4/8B;long long 8B
+  + 浮点数:float 4B;double 8B
+  + 字符:char 1B
+
+___
+
+```c
+char char_1="A";
+scanf("%d",&num_1);
+```
+
++ 变量的作用域(所在的大括号内)、生命周期(所在的大括号内);局部变量(大括号内、函数内)、全局变量(最外层)
++ 变量的内存空间:`char`说明变量char_1是1B的
++ 变量的内存地址:每一个变量都有一个内存空间,每一个内存空间都对应一个内存地址
++ 变量名、变量值、变量的数据类型:`char_1`是变量名,`"A"`是变量值,`char`是声明变量数据类型
++ `&`是取内存地址符
