--- a/1.C语言/配置环境.md
+++ b/1.C语言/配置环境.md
@@ -1,5 +1,14 @@
 ### Visual Studio Code
+  机器语言→汇编语言→C语言→Python、Java等语言
+  国际标准:ANSI C(C89/C90)
+  编译器:Clang,GCC,WIN-TC,SUBLIME,MSVC,Turbo C等
+
+ctrl+f5:运行;f5:调试
+
+项目→属性→链接器→系统→子系统→控制台
+
 #### 认识Visual Studio Code
+
 + Visual Studio Code是一款代码编辑器
 
 #### 初始化配置
