--- a/1.C语言/基础语法.md
+++ b/1.C语言/基础语法.md
@@ -38,7 +38,7 @@ printf("%d,%x,%o",10,10,10)
 
 + 注意!!!所有变量要在最前边声明
 + "f"是"function"的缩写
-+ 格式化输出,%d--十进制,%x--十六进制,%o--八进制,%c--字符,%f--浮点数
++ 格式化输出,%d--十进制,%x--十六进制,%o--八进制,%c--字符,%f--浮点数,%s--字符串
 + 数据类型
   + 整数:int 4B;short 2B;long 4/8B;long long 8B
   + 浮点数:float 4B;double 8B
