--- a/1.C语言/配置环境.md
+++ b/1.C语言/配置环境.md
@@ -7,39 +7,16 @@ ctrl+f5:运行;f5:调试
 
 项目→属性→链接器→系统→子系统→控制台
 
-#### 认识Visual Studio Code
-
-+ Visual Studio Code是一款代码编辑器
-
-#### 初始化配置
-+ 配置中文/英文
-  ctrl+shift+P→Configure Display Language
-  扩展→Chinese Language Pack for Visual Studio Code
-+ 配置主题
-  管理→主题→颜色主题→浅色高对比度
-  扩展→Material Icon Theme,管理→主题→文件图标主题→Material Icon Theme
-+ 配置界面
-
-#### 配置计算机语言
-+ 配置Markdown
-  扩展→Markdown All in One+Markdown Preview Enhanced
-
 #### 运行和调试
 + F9/左击:设置断点
 + F5:启动调试
 + F10:逐步调试
 + F11:单步调试
 
-#### 代码文件管理
+___
 
-
-#### 配置轻量级python
-  + python解释器
-  + 多版本共存
-  + 虚拟环境
-  + 第三方库
-  + code debugger
-#### 配置轻量级java
-  + JDK
-  + 多版本共存
-  + code debugger
++ PyCharm
++ IntelliJ IDEA
++ Visual Studio 2022
++ Typora
++ notepad
